Fixed spacing on username field

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,6 +83,10 @@ input {
     width: 400px;
 }
 
+.user-name {
+  margin-top: 100px;
+}
+
 .topics { 
   padding-top: 130px;
 }
